bindings/c/include/wickra.h

typedef struct HistoricalVolatility HistoricalVolatility;
typedef struct Hma Hma;
typedef struct HoltWinters HoltWinters;
typedef struct HtDcPhase HtDcPhase;
typedef struct HtTrendMode HtTrendMode;
typedef struct HurstExponent HurstExponent;
typedef struct InstantaneousTrendline InstantaneousTrendline;
typedef struct InverseFisherTransform InverseFisherTransform;
typedef struct JarqueBera JarqueBera;
typedef struct Jma Jma;
typedef struct JumpIndicator JumpIndicator;
typedef struct KRatio KRatio;
typedef struct Kama Kama;
typedef struct KellyCriterion KellyCriterion;
typedef struct Kurtosis Kurtosis;
typedef struct LaguerreRsi LaguerreRsi;
typedef struct LinRegAngle LinRegAngle;
typedef struct LinRegIntercept LinRegIntercept;
typedef struct LinearRegression LinearRegression;
void wickra_historical_volatility_batch(struct HistoricalVolatility *handle,
                                        const double *input,
                                        double *out,
                                        uintptr_t n);
void wickra_historical_volatility_reset(struct HistoricalVolatility *handle);
void wickra_historical_volatility_free(struct HistoricalVolatility *handle);
struct Hma *wickra_hma_new(uintptr_t period);
double wickra_hma_update(struct Hma *handle, double value);
void wickra_hma_batch(struct Hma *handle, const double *input, double *out, uintptr_t n);
void wickra_hma_reset(struct Hma *handle);
void wickra_hma_free(struct Hma *handle);
struct HoltWinters *wickra_holt_winters_new(double alpha, double beta);
double wickra_holt_winters_update(struct HoltWinters *handle, double value);
void wickra_holt_winters_batch(struct HoltWinters *handle,
                               const double *input,
                               double *out,
                               uintptr_t n);
void wickra_holt_winters_reset(struct HoltWinters *handle);
void wickra_holt_winters_free(struct HoltWinters *handle);
struct HtDcPhase *wickra_ht_dc_phase_new(void);
double wickra_ht_dc_phase_update(struct HtDcPhase *handle, double value);
void wickra_ht_dc_phase_batch(struct HtDcPhase *handle,
                              const double *input,
                              double *out,
                              uintptr_t n);
void wickra_ht_dc_phase_reset(struct HtDcPhase *handle);
void wickra_ht_dc_phase_free(struct HtDcPhase *handle);
struct HtTrendMode *wickra_ht_trend_mode_new(void);
double wickra_ht_trend_mode_update(struct HtTrendMode *handle, double value);
void wickra_ht_trend_mode_batch(struct HtTrendMode *handle,
                                const double *input,
                                double *out,
                                uintptr_t n);
void wickra_ht_trend_mode_reset(struct HtTrendMode *handle);
void wickra_ht_trend_mode_free(struct HtTrendMode *handle);
struct HurstExponent *wickra_hurst_exponent_new(uintptr_t period, uintptr_t chunks);
double wickra_hurst_exponent_update(struct HurstExponent *handle, double value);
void wickra_hurst_exponent_batch(struct HurstExponent *handle,
                                 const double *input,
                                 double *out,
                                 uintptr_t n);
void wickra_hurst_exponent_reset(struct HurstExponent *handle);
void wickra_hurst_exponent_free(struct HurstExponent *handle);
struct InstantaneousTrendline *wickra_instantaneous_trendline_new(uintptr_t period);
double wickra_instantaneous_trendline_update(struct InstantaneousTrendline *handle, double value);
void wickra_instantaneous_trendline_batch(struct InstantaneousTrendline *handle,
                                          const double *input,
                                          double *out,
                                          uintptr_t n);
void wickra_instantaneous_trendline_reset(struct InstantaneousTrendline *handle);
void wickra_instantaneous_trendline_free(struct InstantaneousTrendline *handle);
struct InverseFisherTransform *wickra_inverse_fisher_transform_new(double scale);
double wickra_inverse_fisher_transform_update(struct InverseFisherTransform *handle, double value);
void wickra_inverse_fisher_transform_batch(struct InverseFisherTransform *handle,
                                           const double *input,
                                           double *out,
                                           uintptr_t n);
void wickra_inverse_fisher_transform_reset(struct InverseFisherTransform *handle);
void wickra_inverse_fisher_transform_free(struct InverseFisherTransform *handle);
struct JarqueBera *wickra_jarque_bera_new(uintptr_t period);
double wickra_jarque_bera_update(struct JarqueBera *handle, double value);
void wickra_jarque_bera_batch(struct JarqueBera *handle,
                              const double *input,
                              double *out,
                              uintptr_t n);
void wickra_jarque_bera_reset(struct JarqueBera *handle);
void wickra_jarque_bera_free(struct JarqueBera *handle);
struct Jma *wickra_jma_new(uintptr_t period, double phase, uint32_t power);
double wickra_jma_update(struct Jma *handle, double value);
void wickra_jma_batch(struct Jma *handle, const double *input, double *out, uintptr_t n);
void wickra_jma_reset(struct Jma *handle);
void wickra_jma_free(struct Jma *handle);
struct JumpIndicator *wickra_jump_indicator_new(uintptr_t period, double threshold);
double wickra_jump_indicator_update(struct JumpIndicator *handle, double value);
void wickra_jump_indicator_batch(struct JumpIndicator *handle,
                                 const double *input,
                                 double *out,
                                 uintptr_t n);
void wickra_jump_indicator_reset(struct JumpIndicator *handle);
void wickra_jump_indicator_free(struct JumpIndicator *handle);
struct KRatio *wickra_k_ratio_new(uintptr_t period);
double wickra_k_ratio_update(struct KRatio *handle, double value);
void wickra_k_ratio_batch(struct KRatio *handle, const double *input, double *out, uintptr_t n);
void wickra_k_ratio_reset(struct KRatio *handle);
void wickra_k_ratio_free(struct KRatio *handle);
struct Kama *wickra_kama_new(uintptr_t er_period, uintptr_t fast, uintptr_t slow);
double wickra_kama_update(struct Kama *handle, double value);
void wickra_kama_batch(struct Kama *handle, const double *input, double *out, uintptr_t n);
void wickra_kama_reset(struct Kama *handle);
void wickra_kama_free(struct Kama *handle);
struct KellyCriterion *wickra_kelly_criterion_new(uintptr_t period);
double wickra_kelly_criterion_update(struct KellyCriterion *handle, double value);
void wickra_kelly_criterion_batch(struct KellyCriterion *handle,
                                  const double *input,
                                  double *out,
                                  uintptr_t n);
void wickra_kelly_criterion_reset(struct KellyCriterion *handle);
void wickra_kelly_criterion_free(struct KellyCriterion *handle);
struct Kurtosis *wickra_kurtosis_new(uintptr_t period);
double wickra_kurtosis_update(struct Kurtosis *handle, double value);
void wickra_kurtosis_batch(struct Kurtosis *handle, const double *input, double *out, uintptr_t n);
void wickra_kurtosis_reset(struct Kurtosis *handle);
void wickra_kurtosis_free(struct Kurtosis *handle);
struct LaguerreRsi *wickra_laguerre_rsi_new(double gamma);
double wickra_laguerre_rsi_update(struct LaguerreRsi *handle, double value);
void wickra_laguerre_rsi_batch(struct LaguerreRsi *handle,
                               const double *input,
                               double *out,
                               uintptr_t n);
void wickra_laguerre_rsi_reset(struct LaguerreRsi *handle);
void wickra_laguerre_rsi_free(struct LaguerreRsi *handle);
struct LinearRegression *wickra_linear_regression_new(uintptr_t period);
double wickra_linear_regression_update(struct LinearRegression *handle, double value);
void wickra_linear_regression_batch(struct LinearRegression *handle,
                                    const double *input,
                                    double *out,
                                    uintptr_t n);
void wickra_linear_regression_reset(struct LinearRegression *handle);
void wickra_linear_regression_free(struct LinearRegression *handle);
struct LinRegAngle *wickra_lin_reg_angle_new(uintptr_t period);
double wickra_lin_reg_angle_update(struct LinRegAngle *handle, double value);
void wickra_lin_reg_angle_batch(struct LinRegAngle *handle,
                                const double *input,
                                double *out,
                                uintptr_t n);
void wickra_lin_reg_angle_reset(struct LinRegAngle *handle);
void wickra_lin_reg_angle_free(struct LinRegAngle *handle);
struct LinRegIntercept *wickra_lin_reg_intercept_new(uintptr_t period);