bindings/csharp/Wickra/Generated/NativeMethods.g.cs


    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_historical_volatility_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_historical_volatility_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_historical_volatility_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_hma_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_hma_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_hma_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_hma_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_hma_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_holt_winters_new(double alpha, double beta);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_holt_winters_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_holt_winters_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_holt_winters_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_holt_winters_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_ht_dc_phase_new();

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_ht_dc_phase_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_ht_dc_phase_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_ht_dc_phase_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_ht_dc_phase_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_ht_trend_mode_new();

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_ht_trend_mode_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_ht_trend_mode_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_ht_trend_mode_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_ht_trend_mode_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_hurst_exponent_new(nuint period, nuint chunks);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_hurst_exponent_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_hurst_exponent_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_hurst_exponent_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_hurst_exponent_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_instantaneous_trendline_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_instantaneous_trendline_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_instantaneous_trendline_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_instantaneous_trendline_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_instantaneous_trendline_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_inverse_fisher_transform_new(double scale);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_inverse_fisher_transform_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_inverse_fisher_transform_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_inverse_fisher_transform_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_inverse_fisher_transform_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_jarque_bera_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_jarque_bera_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_jarque_bera_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_jarque_bera_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_jarque_bera_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_jma_new(nuint period, double phase, uint power);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_jma_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_jma_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_jma_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_jma_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_jump_indicator_new(nuint period, double threshold);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_jump_indicator_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_jump_indicator_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_jump_indicator_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_jump_indicator_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_k_ratio_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_k_ratio_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_k_ratio_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_k_ratio_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_k_ratio_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_kama_new(nuint erPeriod, nuint fast, nuint slow);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_kama_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_kama_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_kama_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_kama_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_kelly_criterion_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_kelly_criterion_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_kelly_criterion_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_kelly_criterion_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_kelly_criterion_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_kurtosis_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_kurtosis_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_kurtosis_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_kurtosis_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_kurtosis_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_laguerre_rsi_new(double gamma);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_laguerre_rsi_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_laguerre_rsi_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_laguerre_rsi_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_laguerre_rsi_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_linear_regression_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_linear_regression_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_linear_regression_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_linear_regression_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_linear_regression_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_lin_reg_angle_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_lin_reg_angle_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_lin_reg_angle_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_lin_reg_angle_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_lin_reg_angle_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_lin_reg_intercept_new(nuint period);
